--- a/frogdroid/app/src/main/res/layout/activity_main_3.xml
+++ b/frogdroid/app/src/main/res/layout/activity_main_3.xml
@@ -834,7 +834,7 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/s_dog1"
                 android:contentDescription="@string/s_dog1"
-                android:src="@drawable/dragon"
+                android:src="@drawable/dragon0m"
                 android:visibility="visible" />
         </LinearLayout>
 
@@ -1021,7 +1021,7 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car1a"
                 android:contentDescription="@string/car1a"
-                android:src="@drawable/car1"
+                android:src="@drawable/car11"
                 android:visibility="visible" />
         </LinearLayout>
 
@@ -1046,16 +1046,14 @@
             android:layout_row="7"
             android:layout_column="3"
             android:background="@drawable/street1t">
-
             <ImageView
                 android:id="@+id/car1b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:tag="@string/car1b"
                 android:contentDescription="@string/car1b"
-                android:src="@drawable/car1"
+                android:src="@drawable/car11"
                 android:visibility="visible" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -1097,7 +1095,7 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car1c"
                 android:contentDescription="@string/car1c"
-                android:src="@drawable/car1"
+                android:src="@drawable/car11"
                 android:visibility="visible" />
         </LinearLayout>
 
@@ -1128,9 +1126,8 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car1d"
                 android:contentDescription="@string/car1d"
-                android:src="@drawable/car1"
+                android:src="@drawable/car11"
                 android:visibility="visible" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -1161,7 +1158,7 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car0a"
                 android:contentDescription="@string/car0a"
-                android:src="@drawable/car0"
+                android:src="@drawable/car00"
                 android:visibility="visible" />
         </LinearLayout>
 
@@ -1216,9 +1213,8 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car0b"
                 android:contentDescription="@string/car0b"
-                android:src="@drawable/car0"
+                android:src="@drawable/car00"
                 android:visibility="visible" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -1272,9 +1268,8 @@
                 android:layout_height="wrap_content"
                 android:tag="@string/car0c"
                 android:contentDescription="@string/car0c"
-                android:src="@drawable/car0"
+                android:src="@drawable/car00"
                 android:visibility="visible" />
-
         </LinearLayout>
 
         <LinearLayout
