Sound release commit https://darkstar.work/froga/ https://area23.at/froga/

--- a/frogweb/froga/css/froga.css
+++ b/frogweb/froga/css/froga.css
@@ -1,5 +1,6 @@
 ﻿/*
-    2023-11-05 froga.css by heinrich elsigan 
+    2023-11-05  froga.js by Heinrich Elsigan (Copy left)
+    https://area23.at/froga/
 */
 body {
 }
