2023-11-12 https://area23.at/froga/index.html
some minor .css .html .js fixes

--- a/frogweb/froga/css/froga.css
+++ b/frogweb/froga/css/froga.css
@@ -1,13 +1,20 @@
 ﻿/*
     froga.css ©
     2023-11-05 by Heinrich Elsigan
-    https://area23.at/froga/
+    https://area23.at/froga/froga.html
     https://darkstar.work/froga/
     2023-11-12 last change 
 */
+/*
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-style: none;
+    border-spacing: 0;
+    border-width: 0;
+*/
 
 body.frogbody {
-    width: 100%;
+    width: 100%;    
 }
 
 div.froga {
@@ -26,7 +33,9 @@ div.froga {
             table-layout: fixed;
             inset-block-start: initial;
             inset-block-start: auto;
-        */
+    */
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
     border-style: none;
     border-color: white;
     color: white;
@@ -34,20 +43,6 @@ div.froga {
     border-width: 0pt;
     background-color: black;
 }
-
-    div.froga.img {
-        width: 8%;
-        min-width: 36pt;
-        height: 6%;
-        min-height: 27pt;
-        padding: 0 0 0 0;
-        margin: 0 0 0 0;
-        border-style: none;
-        border-spacing: 0px;
-        border-width: 0px;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-    }
 
     div.froga.frogaHeader {
         width: 71.11%;
@@ -62,7 +57,6 @@ div.froga {
         border-spacing: 0px;
         background-repeat: no-repeat;
     }
-
         div.froga.frogaHeader#headerLeft {
             height: 8%;
             min-height: 36pt;
@@ -72,27 +66,22 @@ div.froga {
             font-size: larger;
             text-align: right;
         }
-
         div.froga.frogaHeader#leftNotes {
             color: whitesmoke;
             width: 5.33%;
             max-width: 24pt;
             font-size: large;
         }
-
         div.froga.frogaHeader#frogsInWhole {
             color: greenyellow;
         }
-
         div.froga.frogaHeader#frogsLeft {
             color: aqua;
             visibility: hidden;
         }
-
         div.froga.frogaHeader#frogsDied {
             color: gainsboro;
         }
-
         div.froga.frogaHeader#headerCenter {
             height: 8%;
             min-height: 36pt;
@@ -103,7 +92,6 @@ div.froga {
             font-size: medium;
             text-align: center;
         }
-
         div.froga.frogaHeader.headerImage {
             width: 53.33%;
             min-width: 240pt;
@@ -117,7 +105,6 @@ div.froga {
             background-repeat: no-repeat;
             background-size: 100% 100%;
         }
-
         div.froga.frogaHeader#headerRight {
             height: 7.11%;
             min-height: 36pt;
@@ -127,15 +114,12 @@ div.froga {
             font-size: larger;
             text-align: left;
         }
-
         div.froga.frogaHeader#frogsLevel {
             color: orangered;
         }
-
         div.froga.frogaHeader#frogaLevel {
             color: greenyellow;
         }
-
         div.froga.frogaHeader#rightNotes {
             color: whitesmoke;
             width: 5.33%;
@@ -159,7 +143,6 @@ div.froga {
         inset-block-start: initial;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     }
-
         div.froga.frogaFooter#spanLeft {
             height: 6%;
             min-height: 27pt;
@@ -168,7 +151,6 @@ div.froga {
             vertical-align: middle;
             text-align: left;
         }
-
         div.froga.frogaFooter#spanRight {
             height: 6%;
             min-height: 27pt;
@@ -179,122 +161,130 @@ div.froga {
         }
 
 
-table.frogaTable {
-    width: 80%;
-    min-width: 360pt;
-    height: 60%;
-    min-height: 270pt;
-    align-content: center;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    background-repeat: no-repeat;
-}
-
-tr.frogaTr {
-    width: 80%;
-    min-width: 360px;
-    height: 6%;
-    min-height: 27px;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
-}
-
-td.frogaTd {
-    width: 8%;
-    /* min-width: 36pt; */
-    height: 6%;
-    min-height: 27pt;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-
-img.frogaWood {
-    width: 100%;
-    min-width: 36pt;
-    height: 100%;
-    min-height: 27pt;
-    visibility: visible;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    z-index: 100;
-    /* backface-visibility: revert; background-size: 100% 100%; */
-}
-
-img.frogaImage {
-    width: 100%;
-    min-width: 36pt;
-    height: 100%;
-    min-height: 27pt;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
-}
-
-img.frogaImageWhole {
-    width: 100%;
-    min-width: 36pt;
-    height: 100%;
-    min-height: 27pt;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
-}
-
-img.frogaImage#frog0,
-img.frogaImage#frog1,
-img.frogaImage#frog2,
-img.frogaImage#frog3 {
-    width: 100%;
-    min-width: 36pt;
-    height: 100%;
-    min-height: 27pt;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style:;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
-}
+    div.froga.table.frogaTable {
+        width: 80%;
+        min-width: 360pt;
+        height: 60%;
+        min-height: 270pt;
+        align-content: center;
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+        border-style: none;
+        border-spacing: 0px;
+        background-repeat: no-repeat;
+    }
+        div.froga.table.frogaTable.tr.frogaTr {
+            width: 80%;
+            min-width: 360px;
+            height: 6%;
+            min-height: 27px;
+            padding: 0 0 0 0;
+            margin: 0 0 0 0;
+            border-style: none;
+            border-spacing: 0px;
+            border-width: 0px;
+            background-repeat: no-repeat;
+            /* background-size: 100% 100%; */
+        }
+            div.froga.table.frogaTable.tr.frogaTr.td.frogaTd {
+                width: 8%;
+                /* min-width: 36pt; */
+                height: 6%;
+                min-height: 27pt;
+                padding: 0 0 0 0;
+                margin: 0 0 0 0;
+                border-style: none;
+                border-spacing: 0px;
+                border-width: 0px;
+                /* background-repeat: no-repeat; */
+                background-size: 100% 100%;
+            }
 
 
-img#aUp,
-img#aDown,
-img#aLeft,
-img#aRight {
-    width: 7.11%;
-    min-width: 32pt;
-    height: 6%;
-    min-height: 27pt;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-    border-style: none;
-    border-spacing: 0px;
-    border-width: 0px;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
+    div.froga.img {
+        width: 8%;
+        min-width: 36pt;
+        height: 6%;
+        min-height: 27pt;
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+        border-style: none;
+        border-spacing: 0pt;
+        border-width: 0pt;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    }
+        div.froga.img.frogaWood {
+            width: 100%;
+            min-width: 36pt;
+            height: 100%;
+            min-height: 27pt;
+            visibility: visible;
+            padding: 0 0 0 0;
+            margin: 0 0 0 0;
+            border-style: none;
+            border-spacing: 0px;
+            border-width: 0px;
+            background-repeat: no-repeat;
+            z-index: 100;
+            /* backface-visibility: revert; background-size: 100% 100%; */
+        }
+        div.froga.img.frogaImageWhole {
+            width: 100%;
+            min-width: 36pt;
+            height: 100%;
+            min-height: 27pt;
+            padding: 0 0 0 0;
+            margin: 0 0 0 0;
+            border-style: none;
+            border-spacing: 0px;
+            border-width: 0px;
+            background-repeat: no-repeat;
+            /* background-size: 100% 100%; */
+        }
+        div.froga.img.frogaImage {
+            width: 100%;
+            min-width: 36pt;
+            height: 100%;
+            min-height: 27pt;
+            padding: 0 0 0 0;
+            margin: 0 0 0 0;
+            border-style: none;
+            border-spacing: 0px;
+            border-width: 0px;
+            background-repeat: no-repeat;
+            /* background-size: 100% 100%; */
+        }
+            div.froga.img.frogaImage#frog0,
+            div.froga.img.frogaImage#frog1,
+            div.froga.img.frogaImage#frog2,
+            div.froga.img.frogaImage#frog3 {
+                width: 100%;
+                min-width: 36pt;
+                height: 100%;
+                min-height: 27pt;
+                padding: 0 0 0 0;
+                margin: 0 0 0 0;
+                border-style:;
+                border-spacing: 0px;
+                border-width: 0px;
+                background-repeat: no-repeat;
+                /* background-size: 100% 100%; */
+            }
+        div.froga.img#aUp,
+        div.froga.img#aDown,
+        div.froga.img#aLeft,
+        div.froga.img#aRight {
+            width: 7.11%;
+            min-width: 32pt;
+            height: 6%;
+            min-height: 27pt;
+            padding: 0 0 0 0;
+            margin: 0 0 0 0;
+            border-style: none;
+            border-spacing: 0px;
+            border-width: 0px;
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+
