--- a/frogweb/froga/css/frog.css
+++ b/frogweb/froga/css/frog.css
@@ -1,19 +1,21 @@
 ﻿/*
     froga.css ©
     2023-11-05 by Heinrich Elsigan
-    https://area23.at/froga/
+    https://area23.at/froga/froga.html
     https://darkstar.work/froga/
     2023-11-12 last change 
 */
-
-body.frogbody {
-    /* width: 96%; 
+/*
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     border-style: none;
     border-spacing: 0;
     border-width: 0;
-    */
+*/
+
+
+body.frogbody {
+    width: 100%;    
 }
 
 div.froga {
